# play-with-kafka

./: Makefile  README.md  myfe.html  producer.py  pyproject.toml  send_message_to_user_simpler.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: config.py  main.py  receiver.py
